--- a/COMP1004-W2017-Lesson5/COMP1004-W2017-Lesson5.csproj
+++ b/COMP1004-W2017-Lesson5/COMP1004-W2017-Lesson5.csproj
@@ -109,6 +109,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="CalculatorClassDiagram.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
